# ARES-datamodel

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: dotnet-ci.yaml  dotnet-release-preview.yaml  dotnet-release.yaml  dotnet.yaml  pypi.yaml
data_model/: AresCampaignTag.proto  AresDataSchema.proto  AresDataType.proto  AresStruct.proto  CompletedExperiment.proto  DeviceCommandResult.proto  ExecutionStatusMessages.proto  ExecutionSummaryMessages.proto  PlanTransaction.proto  PlannerAdapterInfo.proto  ValidationResult.proto  ares_data_schema.proto  ares_struct.proto  device_command_result.proto  execution_summary_messages.proto  plan_transaction.proto  planner_adapter_info.proto
data_model/Analyzing/: Analysis.proto  AnalyzerCapabilities.proto  AnalyzerConfig.proto  AnalyzerInfo.proto  AnalyzerSettings.proto  AnalyzerState.proto
data_model/Planning/: ManualPlanner.proto  PlannerStatus.proto  ares_planner.proto
data_model/Templates/: CampaignTemplate.proto  CommandMetadata.proto  CommandTemplate.proto  (+8 more)
dotnet/: ARES-datamodel.sln  ARES-datamodel.slnx
python/: README.md  hatch_build.py  pyproject.toml
python/src/ares_datamodel/: __init__.py  quantity_units.py  quantity_validation.py
python/tests/: test_quantity_units.py
services/: AresAnalysisService.proto  AresAnalyzerManagementService.proto  AresAutomation.proto  AresDevices.proto  AresEvent.proto  AresNotification.proto  AresPlanning.proto  AresValidation.proto  ares_automation.proto  ares_event.proto  ares_notification.proto  ares_server_info.proto
src/: ARES-datamodel.sln
(+164 files in other folders)
